# ai-model-serving-server

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  ERD.md  LICENSE  README.md  SEASONAL_STORY_FEATURE.md  VALUEUP_FEATURES.md  deploy.sh  docker-compose.yml  input_dbs.py  input_sample_dbs.py  json_maker.py  main.py  pyproject.toml  requirements_advanced.txt  test_menu_generation_api.sh  test_metrics.json  test_valueup_features.py
.streamlit/: config.toml
backend/: .env.example  Dockerfile  README.md  add_ai_columns_migration.py  bbox_refiner.py  debug_ocr.py  menu_template_pipeline.py  ocr_deepseek.py  ocr_got.py  requirements.txt
backend/app/: __init__.py  main.py
backend/config/: food_presets.py  settings.py
backend/migrations/: migrate_seasonal_stories.sql
backend/samples/: menu_sample_data_v3.json
backend/services/: image_transform_pipeline.py  inpainting_pipeline.py  korean_translator.py  mvp_pipeline.py  prompt_analyzer.py  sam_service.py  u2net_service.py
backend/src/: config.py  constants.py  database.py  logger.py  models.py
backend/tests/: main.py
deployment/: docker-compose.yml
experiments/: batch_experiments.json  complexity_test.json  my_experiment.json
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+3 more)
samples/: menu_sample_data_v2.json  menu_sample_script.sql
src/: app.py  constants.py  database.py  main.py  models.py  nutrition_service.py  story_service.py  test_functions.py  test_intentparser.py  test_llm_integration.py  test_llm_router.py
(+102 files in other folders)
