[project]
name = "sprint-03-menu-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "openai>=1.55.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
    "requests>=2.32.0",
    "pytz>=2024.2",
    "pydantic>=2.10.0",
]
