[project]
name = "sprint-03-menu-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.44",
    "openai==2.8.1",
    "cryptography==41.0.7",
    "pytest==8.3.3",
    "uvicorn>=0.38.0",
    "google-genai>=1.52.0",
]
